--- a/functional-samples/sample.water_alarm_notification/popup.html
+++ b/functional-samples/sample.water_alarm_notification/popup.html
@@ -4,6 +4,7 @@ found in the LICENSE file. -->
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Water Popup</title>
     <style>
       body {
